Change api base url to common pattern for all apis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8081
-server.context-path=/forms/api
+server.context-path=/api/form
 definition.dir=/home/ruben/dev
 
 security.signing-key=MaYzkSjmkzPC57L
